<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="logistus.net.myapplication.MainActivity">
    <item
        android:id="@+id/action_delete_all_cities"
        android:orderInCategory="2"
        android:title="@string/delete_all_cities"
        android:icon="@drawable/ic_action_delete_white"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_new_city"
        android:orderInCategory="3"
        android:title="@string/add_city"
        android:icon="@drawable/ic_action_add"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/settings"
        android:icon="@drawable/ic_action_settings_white"
        app:showAsAction="always"/>
</menu>