<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="10dp"
        tools:context="logistus.net.logiweather.SettingsActivity">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/temperature_type_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_type"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/settings_temp_celcius"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/celsius" />

                        <RadioButton
                            android:id="@+id/settings_temp_fahrenheit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fahrenheit" />
                    </RadioGroup>
                </LinearLayout>

                <TextView
                    android:id="@+id/time_format_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/time_format"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/time_choices"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/settings_time_12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hour12" />

                        <RadioButton
                            android:id="@+id/settings_time_24"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hour24" />
                    </RadioGroup>
                </LinearLayout>

                <Button
                    android:id="@+id/save_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorAccent"
                    android:text="@string/save"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1159392186617217/7441169697">
    </com.google.android.gms.ads.AdView>
</LinearLayout>